--- a/force-app/main/default/classes/sendPmAnswerCancellationEmail.cls
+++ b/force-app/main/default/classes/sendPmAnswerCancellationEmail.cls
@@ -1,5 +1,4 @@
 //smaske : this trigger is used for sending email alerts to Project Managers/Other Managers when the requested PM CONFIG records are cancelled when MENTOR submits his own KRA PM ANSWER records 
-//OR WHEN Mentor RECALLS the sent KRA Requests (cancelling pm answers)
 public class sendPmAnswerCancellationEmail implements TriggerAction.AfterUpdate {
     
     public void afterUpdate(List<PM_Configure__c> newList, List<PM_Configure__c> oldList) {  
@@ -20,7 +19,6 @@ public class sendPmAnswerCancellationEmail implements TriggerAction.AfterUpdate 
             pmConfigRecordIds.add(pm.Id);
         }
         
-        //smaske : 23-Aug-2024 : Update SOQL querry to fetch PM records where KRA is In Review
         List<PM_Configure__c> cancelledRecords = [Select Id,RecordTypeId,Name,Status__c,Project_Name__c,Mentor__c,Mentee__c,Reporting_Contact__c,KRA__c,KRA__r.Status__c,
                                                   Mentor__r.Email,Mentee__r.Email,Reporting_Contact__r.Email
                                                   FROM PM_Configure__c 
@@ -28,7 +26,7 @@ public class sendPmAnswerCancellationEmail implements TriggerAction.AfterUpdate 
                                                   AND Project_Name__c != null
                                                   AND Status__c = 'Cancelled'
                                                   AND RecordTypeId =: answerRecordTypeId
-                                                  AND KRA__r.Status__c = 'KRA Completed'
+                                                  AND KRA__r.Status__c = 'KRA Inreview'
                                                   AND Id IN :pmConfigRecordIds];
         
         System.debug('Total cancelledRecords size ' +  cancelledRecords.size());
@@ -67,15 +65,11 @@ public class sendPmAnswerCancellationEmail implements TriggerAction.AfterUpdate 
     }
     
     
-    
-    
     public static void sendEmail(Map<String, Map<String, List<PM_Configure__c>>> managerProjPmAnsRecMap) {
         OrgWideEmailAddress[] owea = [SELECT Id FROM OrgWideEmailAddress WHERE Address = 'no-reply.grid@cloudperitus.com'];
-        //smaske : [23/Aug/2024] : below template are not usefull now as disuceed with abhishek BA as the scenarios has changed.
+        //smaske : [23/Aug/2024] : Commented below email alerts as we will not send them
         //Id templateIdForNotifyingMentee = [SELECT Id FROM EmailTemplate WHERE DeveloperName = 'Notifying_Mentee_On_Project_Manager_feedback_cancellation'].Id;
         //Id templateIdForNotifyingMentor = [SELECT Id FROM EmailTemplate WHERE DeveloperName = 'Notifying_Mentor_On_Project_Manager_feedback_cancellation'].Id;
-        
-        //smaske : this below template will is used whgen mentr is submitting his PM ANSWER for Mentee
         Id templateIdForNotifyingProjManager = [SELECT Id FROM EmailTemplate WHERE DeveloperName = 'Notifying_Project_Manager_Other_On_Project_Manager_feedback_cancellation'].Id;
         
         List<Messaging.SingleEmailMessage> emailListToSend = new List<Messaging.SingleEmailMessage>();
@@ -102,8 +96,8 @@ public class sendPmAnswerCancellationEmail implements TriggerAction.AfterUpdate 
             }
         }
         
-        //for templateIdForNotifyingMentee       
-        /*for (String managerId : managerProjPmAnsRecMap.keySet()) {
+        /*for templateIdForNotifyingMentee       
+        for (String managerId : managerProjPmAnsRecMap.keySet()) {
             Map<String, List<PM_Configure__c>> projectMap = managerProjPmAnsRecMap.get(managerId);
             for (String projectName : projectMap.keySet()) {
                 List<PM_Configure__c> pmConfigRecs = projectMap.get(projectName);
@@ -122,11 +116,11 @@ public class sendPmAnswerCancellationEmail implements TriggerAction.AfterUpdate 
                 System.debug('Mentees  msg :: ' +  msg );
                 emailListToSend.add(msg);
             }
-        }*/
+        }
         
         
-        //for templateIdForNotifyingMentor       
-        /*for (String managerId : managerProjPmAnsRecMap.keySet()) {
+        for templateIdForNotifyingMentor       
+        for (String managerId : managerProjPmAnsRecMap.keySet()) {
             Map<String, List<PM_Configure__c>> projectMap = managerProjPmAnsRecMap.get(managerId);
             for (String projectName : projectMap.keySet()) {
                 List<PM_Configure__c> pmConfigRecs = projectMap.get(projectName);
@@ -145,7 +139,7 @@ public class sendPmAnswerCancellationEmail implements TriggerAction.AfterUpdate 
                 System.debug('Mentors  msg :: ' +  msg );
                 emailListToSend.add(msg);
             }
-        } */
+        }*/
         
         System.debug('emailListToSend size :: ' +  emailListToSend.size());
         System.debug('emailListToSend :: ' +  emailListToSend.toString() );
