--- a/force-app/main/default/classes/BatchToCreateKRAforQuaterly_Sch.cls
+++ b/force-app/main/default/classes/BatchToCreateKRAforQuaterly_Sch.cls
@@ -1,9 +1,13 @@
+/*
+ * Smaske : this schedule class is for Contacts with INDIA location
+ * 
+ * 
+ * 
+ *
+*/
 global class BatchToCreateKRAforQuaterly_Sch implements Schedulable {
 global void execute(SchedulableContext sc) {
       BatchToCreateKRAforQuaterly batchExecute = new BatchToCreateKRAforQuaterly(); 
       Database.executeBatch(batchExecute,10);
-    
-      BatchToCreateKRAforQuaterly2 batchExecute2 = new BatchToCreateKRAforQuaterly2(); 
-      Database.executeBatch(batchExecute2,10);
    }
 }
